feat: move companySelector to mainMenu, prefer nuxtUiPro design for basicOptions

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -2,7 +2,7 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-@font-face {
+/* @font-face {
     font-family: 'Ubuntu';
     font-weight: 400;
     src: url('../fonts/Ubuntu/Ubuntu-Regular.ttf') format('truetype');
@@ -11,4 +11,14 @@
   font-family: 'Ubuntu';
   font-weight: 700;
   src: url('../fonts/Ubuntu/Ubuntu-Bold.ttf') format('truetype');
+} */
+@font-face {
+  font-family: 'DMSans';
+  font-weight: 400;
+  src: url('../fonts/DMSans/DMSans-Regular.ttf') format('truetype');
+}
+@font-face {
+font-family: 'DMSans';
+font-weight: 700;
+src: url('../fonts/DMSans/DMSans-Bold.ttf') format('truetype');
 }
